2008-02-10  Luca Ferretti  <elle.uca@libero.it>

	* daemon/gvfsbackendburn.c: (g_vfs_backend_burn_init),
	(file_info_from_node):
	Rename burn:// with old "CD/DVD Creator" name.

	* daemon/gvfsbackendtrash.c: (g_vfs_backend_trash_init),
	(do_query_info):
	Rename trash:// with old "Trash" name.

2008-02-08  Alexander Larsson  <alexl@redhat.com>

        * hal/ghalvolume.c:
        Implement g_volume_should_automount.

2008-02-08  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendcomputer.c:
	Add "filesystem" to computer:
	
        * hal/ghalmount.c:
	Remove spew

2008-02-08  Alexander Larsson  <alexl@redhat.com>

        * hal/ghalmount.c:
	Try to find cdrom icons from autorun.inf.
	Based on patch from John Millikin

2008-02-08  Alexander Larsson  <alexl@redhat.com>

	* common/gvfsdaemonprotocol.c:
	Fix up indentation
	Don't unref file from g_file_icon_get_file().

2008-02-08  Alexander Larsson  <alexl@redhat.com>

	* daemon/gvfsbackendtrash.c:
	Always set CAN_TRASH to false
	
2008-02-08  Alexander Larsson  <alexl@redhat.com>

	* daemon/gvfsbackendtrash.c (unescape_pathname):
	Handle unescaping __ correctly (#514040)

2008-02-06  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
        * daemon/gvfsbackendsmb.c:
	Ensure name is set in query_info (#511601)
	Clean up setting display name of /

2008-02-05  Alexander Larsson  <alexl@redhat.com>

	* client/gdaemonvolumemonitor.c (mount_removed):
	Don't spew warnings when hidden mounts are unmounted.
	
2008-02-05  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendtrash.c:
        (do_query_info):
	Correctly set the name for toplevel items.

2008-02-04  Tomas Bzatek  <tbzatek@redhat.com>

	* daemon/gvfsjobmakesymlink.c:
	Wrong symlink target passed to backend

2008-02-04  Alexander Larsson  <alexl@redhat.com>

	* README:
	Add some info in README

2008-02-04  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c: